syntax = "proto3";

option java_package = "com.example.emovie.proto.UpcomingMovies";
option java_multiple_files = true;

message UpcomingMovieProto {
  int64 id = 1;
  string poster = 2;
  string name = 3;
  float rating = 4;
  string releaseDate = 5;
  string originalLanguage = 6;
}

message UpcomingMoviesProto {
  repeated UpcomingMovieProto movie = 1;
}